--- a/index.html
+++ b/index.html
@@ -52,6 +52,48 @@
         cursor: pointer;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
       }
+      .hidden {
+        /* display: ; */
+        visibility: hidden;
+        margin-top: 150px;
+      }
+
+      .btn {
+        width: 9em;
+        height: 3em;
+        border-radius: 30em;
+        font-size: 15px;
+        font-family: inherit;
+        border: none;
+        position: relative;
+        overflow: hidden;
+        z-index: 1;
+        box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+        cursor: pointer;
+        transition: all 0.7s;
+      }
+
+      .btn::before {
+        content: "";
+        width: 0;
+        height: 3em;
+        border-radius: 30em;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-image: linear-gradient(to right, #0fd850 0%, #f9f047 100%);
+        transition: 0.5s ease;
+        display: block;
+        z-index: -1;
+      }
+
+      .btn:hover::before {
+        width: 9em;
+      }
+      .btn-container {
+        display: flex;
+        justify-content: center;
+      }
     </style>
   </head>
   <body>
@@ -71,6 +113,9 @@
       <div data-value="rock" class="option">🤜</div>
       <div data-value="paper" class="option">🫳</div>
       <div data-value="scissor" class="option">✌️</div>
+    </div>
+    <div class="btn-container">
+      <button class="btn btn-restart hidden">restart</button>
     </div>
   </body>
 </html>
